--- a/examples/example3/config.toml
+++ b/examples/example3/config.toml
@@ -1,7 +1,8 @@
-steps = 1000
+steps = 300
 image = "img.png"
-species = [["N", [204, 255, 153]]]
-cells = [["C", [204, 102, 255]], ["D",[224,31,31]]]
+flow = 0.005
+species = [["N", [204, 255, 153], 0.1]]
+cells = [["C", [204, 102, 255], 0.01], ["D",[224,31,31],0]] # name, color, inflow 
 reactions = [
           {reactants = [[1,"C"], [1,"D"]], products = [], rate = [3,[2,2]]},
           {reactants = [[1,"C"], [1,"N"]], products = [[2,"C"]], rate = [1,[1,1]]},
