--- a/examples/example3/config.toml
+++ b/examples/example3/config.toml
@@ -1,8 +1,13 @@
 steps = 300
 image = "img.png"
 flow = 0.005
-species = [["N", [204, 255, 153], 0.1]]
-cells = [["C", [204, 102, 255], 0.01], ["D",[224,31,31],0]] # name, color, inflow 
+species = [ 
+	{ name = "N", color = [204, 255, 153], inflow = 0.1 }
+	]
+cells = [
+	{ name = "C", color = [204, 102, 255], inflow = 0.01, size = 1},
+	{name = "D", color = [224, 31, 31], inflow = 0, size = 2}
+	]
 reactions = [
           {reactants = [[1,"C"], [1,"D"]], products = [], rate = [3,[2,2]]},
           {reactants = [[1,"C"], [1,"N"]], products = [[2,"C"]], rate = [1,[1,1]]},
