--- a/examples/exampleConcurrency/config.toml
+++ b/examples/exampleConcurrency/config.toml
@@ -1,12 +1,12 @@
-steps = 300
+steps = 3000
 image = "img.png"
-flow = 0.005
+flow = 0.001
 species = [ 
 	{ name = "N", color = [204, 255, 153], inflow = 0.1 }
 	]
 cells = [
-	{ name = "C", color = [204, 102, 255], inflow = 0.01, size = 1},
-	{name = "D", color = [224, 31, 31], inflow = 0, size = 2}
+	{ name = "C", color = [204, 102, 255], inflow = 0},
+	{name = "D", color = [224, 31, 31], inflow = 0}
 	]
 reactions = [
           {reactants = [[1,"C"], [1,"D"]], products = [], rate = [3,[2,2]]},
